--- a/Appliance_Energy_Prediction_Updated.ipynb
+++ b/Appliance_Energy_Prediction_Updated.ipynb
@@ -266,7 +266,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **GitHub Link -**  https://github.com/Aanya05gautam/Appliance-Energy-Prediction\n",
+        "# **GitHub Link -**  https://github.com/Aanya05gautam/Appliance-Energy-Prediction-Model\n",
         "\n",
         "# **Drive Link -** https://drive.google.com/drive/folders/1KUcZ6WJRNnggFdTB06RJYugDyUOBNczP?usp=drive_link\n"
       ],
@@ -5667,7 +5667,7 @@
         "*   Features were selected based on correlation and business relevance.\n",
         "*   Removed highly correlated features (T1–T9, RH_1–RH_9) to avoid redundancy.\n",
         "*   Categorical features were encoded using one-hot encoding.\n",
-        "*   Numeric Data was scaled using StandardScaler for consistent feature contribution.\n",
+        "*   Numeric Data was scaled using Robust Scaler for consistent feature contribution.\n",
         "*   Trained and evaluated 3 models: Linear Regression, Random Forest, XGBoost and Random Forest Regressor selected based on best generalization performance and lowest errors.\n",
         "\n",
         "*   Used feature importance from Random Forest to identify key factors like T_out, hour, Windspeed, and lights.\n",
